[workspace]
resolver = "2"

members = [
    "multiversx-side/client",
    "multiversx-side/client/meta",
    "multiversx-side/client-impls/local-host",
    "multiversx-side/client-impls/local-host/meta",
    "multiversx-side/client-impls/mock",
    "multiversx-side/client-impls/mock/meta",
    "multiversx-side/client-impls/qbft",
    "multiversx-side/client-impls/qbft/meta",
    "multiversx-side/channel",
    "multiversx-side/channel/meta",
    "multiversx-side/connection",
    "multiversx-side/connection/meta",
    "multiversx-side/host",
    "multiversx-side/host/meta"
]
