[package]
name = "host2"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cosmwasm-std = "2.1.4"
cosmwasm-schema = "2.1.4"
schemars = "0.8.21"
cw-storage-plus = "2.0.0"

[dependencies.common-types2]
path = "../common/common-types2"

[dependencies.common-modules2]
path = "../common/common-modules2"

[dev-dependencies]
cw-multi-test = "2.1.1"
