[package]
name = "channel"
version = "0.0.0"
publish = false
edition = "2021"
authors = ["you"]

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "=0.53.0"

[dependencies.common-types]
path = "../common/common-types"

[dependencies.common-modules]
path = "../common/common-modules"

[dependencies.client-common]
path = "../client-impls/client-common"

[dependencies.host]
path = "../host"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "=0.53.0"
