[package]
name = "common-modules2"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.210", default-features = false, features = ["derive"] }
cosmwasm-std = "2.1.4"
cosmwasm-schema = "2.1.4"
keccak-hash = "0.11.0"

[dependencies.common-types2]
path = "../common-types2"
